--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "react_starter",
+  "name": "sweet_corner",
   "version": "1.0.0",
-  "description": "Starting setup for react redux project",
+  "description": "the sweet corner website built with react",
   "main": "index.js",
   "scripts": {
     "start": "node dev_server.js",
     "bundle": "webpack --config webpack.prod.js --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Scott Bowler",
+  "author": "steve benedict",
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Learning-Fuze/react_starter.git"
+    "url": "https://github.com/nebevets/react_sweet_corner.git"
   },
   "dependencies": {
     "react": "^16.5.2",
